uaa-authorization-language-server/src/internal/antlr4/generated/spring/SpringExpressionsParser.ts
/*
 * SPDX-License-Identifier: EUPL-1.2 OR LicenseRef-commercial
 *
 * Copyright (c) 2012-2026 mgm technology partners GmbH
 *
 * Dual License
 * ------------
 * This source file is part of the mgm A12 Platform and available under
 * a choice of two different licenses:
 *
 * 1. Open-Source License – EUPL v1.2
 *    You may redistribute and/or modify this file under the terms of the
 *    European Union Public License, version 1.2 - see https://eupl.eu/.
 *
 * 2. Commercial License
 *    Alternatively, you may obtain a commercial license from
 *    mgm technology partners GmbH, that permits use of this software
 *    under different terms (including support and maintenance services).
 *
 *    Please contact a12-license@mgm-tp.com for more information.
 *
 * You must select and comply with exactly one of the above license options.
 *
 * Warranty Disclaimer (applies to either option)
 * ----------------------------------------------
 * THIS SOFTWARE IS PROVIDED “AS IS” AND WITHOUT WARRANTY OF ANY KIND,
 * WHETHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
 * OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
 * NON-INFRINGEMENT, EXCEPT WHERE SUCH DISCLAIMERS ARE HELD TO BE
 * LEGALLY INVALID. SEE THE RESPECTIVE LICENSE TEXT FOR DETAILS.
 */
// Generated from ./src/internal/antlr4/generated/g4/SpringExpressions.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";

import { SpringExpressionsListener } from "./SpringExpressionsListener.js";

export class SpringExpressionsParser extends antlr.Parser {
	public static readonly AND = 1;
	public static readonly OR = 2;
	public static readonly EQUALS = 3;
	public static readonly NOT_EQUALS = 4;
	public static readonly NOT = 5;
	public static readonly GT = 6;
	public static readonly LT = 7;
	public static readonly GTE = 8;
	public static readonly LTE = 9;
	public static readonly PRINT = 10;
	public static readonly LPAREN = 11;
	public static readonly RPAREN = 12;
	public static readonly LSQUARE_BRACKET = 13;
	public static readonly RSQUARE_BRACKET = 14;
	public static readonly PLUS = 15;
	public static readonly MINUS = 16;
	public static readonly DOT = 17;
	public static readonly COMMA = 18;
	public static readonly AT_SIGN = 19;
	public static readonly ASSIGNMENT = 20;
	public static readonly INSTANCEOF = 21;
	public static readonly BETWEEN = 22;
	public static readonly MATCHES = 23;
	public static readonly NEW = 24;
	public static readonly IDENTIFIER = 25;
	public static readonly STRING_LITERAL = 26;
	public static readonly NUMBER = 27;
	public static readonly BOOLEAN = 28;
	public static readonly INVALID_TOKEN = 29;
	public static readonly WS = 30;
	public static readonly RULE_expression = 0;
	public static readonly RULE_printExpression = 1;
	public static readonly RULE_logicalExpressionWithParen = 2;
	public static readonly RULE_logicalExpression = 3;
	public static readonly RULE_compositeCondition = 4;
	public static readonly RULE_complexCondition = 5;
	public static readonly RULE_baseCondition = 6;
	public static readonly RULE_basicExpression = 7;
	public static readonly RULE_chainMethodCall = 8;
	public static readonly RULE_methodCall = 9;
	public static readonly RULE_constructorExp = 10;
	public static readonly RULE_parameterList = 11;
	public static readonly RULE_property = 12;
	public static readonly RULE_literalValue = 13;
	public static readonly RULE_operator = 14;

	public static readonly literalNames = [
		null,
		null,
		null,
		"'=='",
		"'!='",
		"'!'",
		"'>'",
		"'<'",
		"'>='",
		"'<='",
		"'print'",
		"'('",
		"')'",
		"'['",
		"']'",
		"'+'",
		"'-'",
		"'.'",
		"','",
		"'@'",
		"'='",
		"'instanceof'",
		"'between'",
		"'matches'",
		"'new'"
	];

	public static readonly symbolicNames = [
		null,
		"AND",
		"OR",
		"EQUALS",
		"NOT_EQUALS",
		"NOT",
		"GT",
		"LT",
		"GTE",
		"LTE",
		"PRINT",
		"LPAREN",
		"RPAREN",
		"LSQUARE_BRACKET",
		"RSQUARE_BRACKET",
		"PLUS",
		"MINUS",
		"DOT",
		"COMMA",
		"AT_SIGN",
		"ASSIGNMENT",
		"INSTANCEOF",
		"BETWEEN",
		"MATCHES",
		"NEW",
		"IDENTIFIER",
		"STRING_LITERAL",
		"NUMBER",
		"BOOLEAN",
		"INVALID_TOKEN",
		"WS"
	];
	public static readonly ruleNames = [
		"expression",
		"printExpression",
		"logicalExpressionWithParen",
		"logicalExpression",
		"compositeCondition",
		"complexCondition",
		"baseCondition",
		"basicExpression",
		"chainMethodCall",
		"methodCall",
		"constructorExp",
		"parameterList",
		"property",
		"literalValue",
		"operator"
	];

	public get grammarFileName(): string {
		return "SpringExpressions.g4";
	}
	public get literalNames(): (string | null)[] {
		return SpringExpressionsParser.literalNames;
	}
	public get symbolicNames(): (string | null)[] {
		return SpringExpressionsParser.symbolicNames;
	}
	public get ruleNames(): string[] {
		return SpringExpressionsParser.ruleNames;
	}
	public get serializedATN(): number[] {
		return SpringExpressionsParser._serializedATN;
	}

	protected createFailedPredicateException(
		predicate?: string,
		message?: string
	): antlr.FailedPredicateException {
		return new antlr.FailedPredicateException(this, predicate, message);
	}

	public constructor(input: antlr.TokenStream) {
		super(input);
		this.interpreter = new antlr.ParserATNSimulator(
			this,
			SpringExpressionsParser._ATN,
			SpringExpressionsParser.decisionsToDFA,
			new antlr.PredictionContextCache()
		);
	}
	public expression(): ExpressionContext {
		const localContext = new ExpressionContext(this.context, this.state);
		this.enterRule(localContext, 0, SpringExpressionsParser.RULE_expression);
		try {
			this.state = 36;
			this.errorHandler.sync(this);
			switch (this.tokenStream.LA(1)) {
				case SpringExpressionsParser.PRINT:
					this.enterOuterAlt(localContext, 1);
					{
						this.state = 30;
						this.printExpression();
						this.state = 31;
						this.match(SpringExpressionsParser.EOF);
					}
					break;
				case SpringExpressionsParser.NOT:
				case SpringExpressionsParser.LPAREN:
				case SpringExpressionsParser.AT_SIGN:
				case SpringExpressionsParser.NEW:
				case SpringExpressionsParser.IDENTIFIER:
				case SpringExpressionsParser.STRING_LITERAL:
				case SpringExpressionsParser.NUMBER:
				case SpringExpressionsParser.BOOLEAN:
					this.enterOuterAlt(localContext, 2);
					{
						this.state = 33;
						this.logicalExpressionWithParen();
						this.state = 34;
						this.match(SpringExpressionsParser.EOF);
					}
					break;
				default:
					throw new antlr.NoViableAltException(this);
			}
		} catch (re) {
			if (re instanceof antlr.RecognitionException) {
				this.errorHandler.reportError(this, re);
				this.errorHandler.recover(this, re);
			} else {
				throw re;
			}
		} finally {
			this.exitRule();
		}
		return localContext;
	}
	public printExpression(): PrintExpressionContext {
		const localContext = new PrintExpressionContext(this.context, this.state);
		this.enterRule(
			localContext,
			2,
			SpringExpressionsParser.RULE_printExpression
		);
		let _la: number;
		try {
			this.enterOuterAlt(localContext, 1);
			{
				this.state = 38;
				this.match(SpringExpressionsParser.PRINT);
				this.state = 39;
				this.match(SpringExpressionsParser.LPAREN);
				this.state = 43;
				this.errorHandler.sync(this);
				switch (
					this.interpreter.adaptivePredict(this.tokenStream, 1, this.context)
				) {
					case 1:
						{
							this.state = 40;
							this.match(SpringExpressionsParser.STRING_LITERAL);
						}
						break;
					case 2:
						{
							this.state = 41;
							this.chainMethodCall();
						}
						break;
					case 3:
						{
							this.state = 42;
							this.match(SpringExpressionsParser.IDENTIFIER);
						}
						break;
				}
				this.state = 54;
				this.errorHandler.sync(this);
				_la = this.tokenStream.LA(1);
				while (_la === 15) {
					{
						{
							this.state = 45;
							this.match(SpringExpressionsParser.PLUS);
							this.state = 50;
							this.errorHandler.sync(this);
							switch (
								this.interpreter.adaptivePredict(
									this.tokenStream,
									2,
									this.context
								)
							) {
								case 1:
									{
										this.state = 46;
										this.match(SpringExpressionsParser.STRING_LITERAL);
									}
									break;
								case 2:
									{
										this.state = 47;
										this.chainMethodCall();
									}
									break;
								case 3:
									{
										this.state = 48;
										this.match(SpringExpressionsParser.IDENTIFIER);
									}
									break;
								case 4:
									{
										this.state = 49;
										this.property();
									}
									break;
							}
						}
					}
					this.state = 56;
					this.errorHandler.sync(this);
					_la = this.tokenStream.LA(1);
				}
				this.state = 57;
				this.match(SpringExpressionsParser.RPAREN);
			}
		} catch (re) {
			if (re instanceof antlr.RecognitionException) {
				this.errorHandler.reportError(this, re);
				this.errorHandler.recover(this, re);
			} else {
				throw re;
			}
		} finally {
			this.exitRule();
		}
		return localContext;
	}
	public logicalExpressionWithParen(): LogicalExpressionWithParenContext {
		const localContext = new LogicalExpressionWithParenContext(
			this.context,
			this.state
		);
		this.enterRule(
			localContext,
			4,
			SpringExpressionsParser.RULE_logicalExpressionWithParen
		);
		let _la: number;
		try {
			this.enterOuterAlt(localContext, 1);
			{
				this.state = 64;
				this.errorHandler.sync(this);
				switch (
					this.interpreter.adaptivePredict(this.tokenStream, 4, this.context)
				) {
					case 1:
						{
							this.state = 59;
							this.logicalExpression();
						}
						break;
					case 2:
						{
							{
								this.state = 60;
								this.match(SpringExpressionsParser.LPAREN);
								this.state = 61;
								this.logicalExpressionWithParen();
								this.state = 62;
								this.match(SpringExpressionsParser.RPAREN);
							}
						}
						break;
				}
				this.state = 76;
				this.errorHandler.sync(this);
				_la = this.tokenStream.LA(1);
				while (_la === 1 || _la === 2) {
					{
						{
							this.state = 66;
							_la = this.tokenStream.LA(1);
							if (!(_la === 1 || _la === 2)) {
								this.errorHandler.recoverInline(this);
							} else {
								this.errorHandler.reportMatch(this);
								this.consume();
							}
							this.state = 72;
							this.errorHandler.sync(this);
							switch (
								this.interpreter.adaptivePredict(
									this.tokenStream,
									5,
									this.context
								)
							) {
								case 1:
									{
										{
											this.state = 67;
											this.match(SpringExpressionsParser.LPAREN);
											this.state = 68;
											this.logicalExpressionWithParen();
											this.state = 69;
											this.match(SpringExpressionsParser.RPAREN);
										}
									}
									break;
								case 2:
									{
										this.state = 71;
										this.logicalExpression();
									}
									break;
							}
						}
					}
					this.state = 78;
					this.errorHandler.sync(this);
					_la = this.tokenStream.LA(1);
				}
			}
		} catch (re) {
			if (re instanceof antlr.RecognitionException) {
				this.errorHandler.reportError(this, re);
				this.errorHandler.recover(this, re);
			} else {
				throw re;
			}
		} finally {
			this.exitRule();
		}
		return localContext;
	}
	public logicalExpression(): LogicalExpressionContext {
		const localContext = new LogicalExpressionContext(this.context, this.state);
		this.enterRule(
			localContext,
			6,
			SpringExpressionsParser.RULE_logicalExpression
		);
		let _la: number;
		try {
			let alternative: number;
			this.enterOuterAlt(localContext, 1);
			{
				this.state = 79;
				this.compositeCondition();
				this.state = 84;
				this.errorHandler.sync(this);
				alternative = this.interpreter.adaptivePredict(
					this.tokenStream,
					7,
					this.context
				);
				while (
					alternative !== 2 &&
					alternative !== antlr.ATN.INVALID_ALT_NUMBER
				) {
					if (alternative === 1) {
						{
							{
								this.state = 80;
								_la = this.tokenStream.LA(1);
								if (!(_la === 1 || _la === 2)) {
									this.errorHandler.recoverInline(this);
								} else {
									this.errorHandler.reportMatch(this);
									this.consume();
								}
								this.state = 81;
								this.compositeCondition();
							}
						}
					}
					this.state = 86;
					this.errorHandler.sync(this);
					alternative = this.interpreter.adaptivePredict(
						this.tokenStream,
						7,
						this.context
					);
				}
			}
		} catch (re) {
			if (re instanceof antlr.RecognitionException) {
				this.errorHandler.reportError(this, re);
				this.errorHandler.recover(this, re);
			} else {
				throw re;
			}
		} finally {
			this.exitRule();
		}
		return localContext;
	}
	public compositeCondition(): CompositeConditionContext {
		const localContext = new CompositeConditionContext(
			this.context,
			this.state
		);
		this.enterRule(
			localContext,
			8,
			SpringExpressionsParser.RULE_compositeCondition
		);
		let _la: number;
		try {
			this.state = 115;
			this.errorHandler.sync(this);
			switch (
				this.interpreter.adaptivePredict(this.tokenStream, 11, this.context)
			) {
				case 1:
					this.enterOuterAlt(localContext, 1);
					{
						this.state = 90;
						this.errorHandler.sync(this);
						_la = this.tokenStream.LA(1);
						while (_la === 5) {
							{
								{
									this.state = 87;
									this.match(SpringExpressionsParser.NOT);
								}
							}
							this.state = 92;
							this.errorHandler.sync(this);
							_la = this.tokenStream.LA(1);
						}
						this.state = 93;
						this.baseCondition();
					}
					break;
				case 2:
					this.enterOuterAlt(localContext, 2);
					{
						this.state = 97;
						this.errorHandler.sync(this);
						_la = this.tokenStream.LA(1);
						while (_la === 5) {
							{
								{
									this.state = 94;
									this.match(SpringExpressionsParser.NOT);
								}
							}
							this.state = 99;
							this.errorHandler.sync(this);
							_la = this.tokenStream.LA(1);
						}
						this.state = 100;
						this.match(SpringExpressionsParser.LPAREN);
						this.state = 101;
						this.baseCondition();
						this.state = 102;
						this.match(SpringExpressionsParser.RPAREN);
					}
					break;
				case 3:
					this.enterOuterAlt(localContext, 3);
					{
						this.state = 107;
						this.errorHandler.sync(this);
						_la = this.tokenStream.LA(1);
						while (_la === 5) {
							{
								{
									this.state = 104;
									this.match(SpringExpressionsParser.NOT);
								}
							}
							this.state = 109;
							this.errorHandler.sync(this);
							_la = this.tokenStream.LA(1);
						}
						this.state = 110;
						this.match(SpringExpressionsParser.LPAREN);
						this.state = 111;
						this.complexCondition();
						this.state = 112;
						this.match(SpringExpressionsParser.RPAREN);
					}
					break;
				case 4:
					this.enterOuterAlt(localContext, 4);
					{
						this.state = 114;
						this.complexCondition();
					}
					break;
			}
		} catch (re) {
			if (re instanceof antlr.RecognitionException) {
				this.errorHandler.reportError(this, re);
				this.errorHandler.recover(this, re);
			} else {
				throw re;
			}
		} finally {
			this.exitRule();
		}
		return localContext;
	}
	public complexCondition(): ComplexConditionContext {
		const localContext = new ComplexConditionContext(this.context, this.state);
		this.enterRule(
			localContext,
			10,
			SpringExpressionsParser.RULE_complexCondition
		);
		try {
			this.state = 129;
			this.errorHandler.sync(this);
			switch (
				this.interpreter.adaptivePredict(this.tokenStream, 12, this.context)
			) {
				case 1:
					this.enterOuterAlt(localContext, 1);
					{
						this.state = 117;
						this.basicExpression();
						this.state = 118;
						this.operator();
						this.state = 119;
						this.basicExpression();
					}
					break;
				case 2:
					this.enterOuterAlt(localContext, 2);
					{
						this.state = 121;
						this.chainMethodCall();
						this.state = 122;
						this.operator();
						this.state = 123;
						this.basicExpression();
					}
					break;
				case 3:
					this.enterOuterAlt(localContext, 3);
					{
						this.state = 125;
						this.basicExpression();
						this.state = 126;
						this.operator();
						this.state = 127;
						this.chainMethodCall();
					}
					break;
			}
		} catch (re) {
			if (re instanceof antlr.RecognitionException) {
				this.errorHandler.reportError(this, re);
				this.errorHandler.recover(this, re);
			} else {
				throw re;
			}
		} finally {
			this.exitRule();
		}
		return localContext;
	}
	public baseCondition(): BaseConditionContext {
		const localContext = new BaseConditionContext(this.context, this.state);
		this.enterRule(
			localContext,
			12,
			SpringExpressionsParser.RULE_baseCondition
		);
		try {
			this.state = 137;
			this.errorHandler.sync(this);
			switch (
				this.interpreter.adaptivePredict(this.tokenStream, 13, this.context)
			) {
				case 1:
					this.enterOuterAlt(localContext, 1);
					{
						this.state = 131;
						this.chainMethodCall();
					}
					break;
				case 2:
					this.enterOuterAlt(localContext, 2);
					{
						this.state = 132;
						this.basicExpression();
					}
					break;
				case 3:
					this.enterOuterAlt(localContext, 3);
					{
						this.state = 133;
						this.property();
						this.state = 134;
						this.match(SpringExpressionsParser.DOT);
						this.state = 135;
						this.chainMethodCall();
					}
					break;
			}
		} catch (re) {
			if (re instanceof antlr.RecognitionException) {
				this.errorHandler.reportError(this, re);
				this.errorHandler.recover(this, re);
			} else {
				throw re;
			}
		} finally {
			this.exitRule();
		}
		return localContext;
	}
	public basicExpression(): BasicExpressionContext {
		const localContext = new BasicExpressionContext(this.context, this.state);
		this.enterRule(
			localContext,
			14,
			SpringExpressionsParser.RULE_basicExpression
		);
		try {
			this.state = 145;
			this.errorHandler.sync(this);
			switch (
				this.interpreter.adaptivePredict(this.tokenStream, 14, this.context)
			) {
				case 1:
					this.enterOuterAlt(localContext, 1);
					{
						this.state = 139;
						this.property();
					}
					break;
				case 2:
					this.enterOuterAlt(localContext, 2);
					{
						this.state = 140;
						this.literalValue();
					}
					break;
				case 3:
					this.enterOuterAlt(localContext, 3);
					{
						this.state = 141;
						this.constructorExp();
					}
					break;
				case 4:
					this.enterOuterAlt(localContext, 4);
					{
						this.state = 142;
						this.match(SpringExpressionsParser.STRING_LITERAL);
						this.state = 143;
						this.match(SpringExpressionsParser.ASSIGNMENT);
						this.state = 144;
						this.basicExpression();
					}
					break;
			}
		} catch (re) {
			if (re instanceof antlr.RecognitionException) {
				this.errorHandler.reportError(this, re);
				this.errorHandler.recover(this, re);
			} else {
				throw re;
			}
		} finally {
			this.exitRule();
		}
		return localContext;
	}
	public chainMethodCall(): ChainMethodCallContext {
		const localContext = new ChainMethodCallContext(this.context, this.state);
		this.enterRule(
			localContext,
			16,
			SpringExpressionsParser.RULE_chainMethodCall
		);
		let _la: number;
		try {
			this.enterOuterAlt(localContext, 1);
			{
				this.state = 147;
				this.methodCall();
				this.state = 152;
				this.errorHandler.sync(this);
				_la = this.tokenStream.LA(1);
				while (_la === 17) {
					{
						{
							this.state = 148;
							this.match(SpringExpressionsParser.DOT);
							this.state = 149;
							this.methodCall();
						}
					}
					this.state = 154;
					this.errorHandler.sync(this);
					_la = this.tokenStream.LA(1);
				}
			}
		} catch (re) {
			if (re instanceof antlr.RecognitionException) {
				this.errorHandler.reportError(this, re);
				this.errorHandler.recover(this, re);
			} else {
				throw re;
			}
		} finally {
			this.exitRule();
		}
		return localContext;
	}
	public methodCall(): MethodCallContext {
		const localContext = new MethodCallContext(this.context, this.state);
		this.enterRule(localContext, 18, SpringExpressionsParser.RULE_methodCall);
		let _la: number;
		try {
			this.enterOuterAlt(localContext, 1);
			{
				this.state = 156;
				this.errorHandler.sync(this);
				_la = this.tokenStream.LA(1);
				if (_la === 19) {
					{
						this.state = 155;
						this.match(SpringExpressionsParser.AT_SIGN);
					}
				}

				this.state = 158;
				this.property();
				this.state = 159;
				this.match(SpringExpressionsParser.LPAREN);
				this.state = 161;
				this.errorHandler.sync(this);
				_la = this.tokenStream.LA(1);
				if ((_la & ~0x1f) === 0 && ((1 << _la) & 520093696) !== 0) {
					{
						this.state = 160;
						this.parameterList();
					}
				}

				this.state = 163;
				this.match(SpringExpressionsParser.RPAREN);
			}
		} catch (re) {
			if (re instanceof antlr.RecognitionException) {
				this.errorHandler.reportError(this, re);
				this.errorHandler.recover(this, re);
			} else {
				throw re;
			}
		} finally {
			this.exitRule();
		}
		return localContext;
	}
	public constructorExp(): ConstructorExpContext {
		const localContext = new ConstructorExpContext(this.context, this.state);
		this.enterRule(
			localContext,
			20,
			SpringExpressionsParser.RULE_constructorExp
		);
		let _la: number;
		try {
			this.enterOuterAlt(localContext, 1);
			{
				this.state = 165;
				this.match(SpringExpressionsParser.NEW);
				this.state = 166;
				this.property();
				this.state = 167;
				this.match(SpringExpressionsParser.LPAREN);
				{
					this.state = 169;
					this.errorHandler.sync(this);
					_la = this.tokenStream.LA(1);
					if ((_la & ~0x1f) === 0 && ((1 << _la) & 520093696) !== 0) {
						{
							this.state = 168;
							this.parameterList();
						}
					}
				}
				this.state = 171;
				this.match(SpringExpressionsParser.RPAREN);
			}
		} catch (re) {
			if (re instanceof antlr.RecognitionException) {
				this.errorHandler.reportError(this, re);
				this.errorHandler.recover(this, re);
			} else {
				throw re;
			}
		} finally {
			this.exitRule();
		}
		return localContext;
	}
	public parameterList(): ParameterListContext {
		const localContext = new ParameterListContext(this.context, this.state);
		this.enterRule(
			localContext,
			22,
			SpringExpressionsParser.RULE_parameterList
		);
		let _la: number;
		try {
			this.enterOuterAlt(localContext, 1);
			{
				this.state = 176;
				this.errorHandler.sync(this);
				switch (this.tokenStream.LA(1)) {
					case SpringExpressionsParser.STRING_LITERAL:
					case SpringExpressionsParser.NUMBER:
					case SpringExpressionsParser.BOOLEAN:
						{
							this.state = 173;
							this.literalValue();
						}
						break;
					case SpringExpressionsParser.IDENTIFIER:
						{
							this.state = 174;
							this.property();
						}
						break;
					case SpringExpressionsParser.NEW:
						{
							this.state = 175;
							this.constructorExp();
						}
						break;
					default:
						throw new antlr.NoViableAltException(this);
				}
				this.state = 186;
				this.errorHandler.sync(this);
				_la = this.tokenStream.LA(1);
				while (_la === 18) {
					{
						{
							this.state = 178;
							this.match(SpringExpressionsParser.COMMA);
							this.state = 182;
							this.errorHandler.sync(this);
							switch (this.tokenStream.LA(1)) {
								case SpringExpressionsParser.STRING_LITERAL:
								case SpringExpressionsParser.NUMBER:
								case SpringExpressionsParser.BOOLEAN:
									{
										this.state = 179;
										this.literalValue();
									}
									break;
								case SpringExpressionsParser.IDENTIFIER:
									{
										this.state = 180;
										this.property();
									}
									break;
								case SpringExpressionsParser.NEW:
									{
										this.state = 181;
										this.constructorExp();
									}
									break;
								default:
									throw new antlr.NoViableAltException(this);
							}
						}
					}
					this.state = 188;
					this.errorHandler.sync(this);
					_la = this.tokenStream.LA(1);
				}
			}
		} catch (re) {
			if (re instanceof antlr.RecognitionException) {
				this.errorHandler.reportError(this, re);
				this.errorHandler.recover(this, re);
			} else {
				throw re;
			}
		} finally {
			this.exitRule();
		}
		return localContext;
	}
	public property(): PropertyContext {
		const localContext = new PropertyContext(this.context, this.state);
		this.enterRule(localContext, 24, SpringExpressionsParser.RULE_property);
		let _la: number;
		try {
			let alternative: number;
			this.enterOuterAlt(localContext, 1);
			{
				this.state = 189;
				this.match(SpringExpressionsParser.IDENTIFIER);
				this.state = 204;
				this.errorHandler.sync(this);
				alternative = this.interpreter.adaptivePredict(
					this.tokenStream,
					25,
					this.context
				);
				while (
					alternative !== 2 &&
					alternative !== antlr.ATN.INVALID_ALT_NUMBER
				) {
					if (alternative === 1) {
						{
							this.state = 202;
							this.errorHandler.sync(this);
							switch (
								this.interpreter.adaptivePredict(
									this.tokenStream,
									24,
									this.context
								)
							) {
								case 1:
									{
										{
											this.state = 191;
											this.errorHandler.sync(this);
											_la = this.tokenStream.LA(1);
											if (_la === 17) {
												{
													this.state = 190;
													this.match(SpringExpressionsParser.DOT);
												}
											}

											this.state = 193;
											this.match(SpringExpressionsParser.LSQUARE_BRACKET);
											this.state = 195;
											this.errorHandler.sync(this);
											alternative = 1 + 1;
											do {
												switch (alternative) {
													case 1 + 1:
														{
															{
																this.state = 194;
																this.matchWildcard();
															}
														}
														break;
													default:
														throw new antlr.NoViableAltException(this);
												}
												this.state = 197;
												this.errorHandler.sync(this);
												alternative = this.interpreter.adaptivePredict(
													this.tokenStream,
													23,
													this.context
												);
											} while (
												alternative !== 1 &&
												alternative !== antlr.ATN.INVALID_ALT_NUMBER
											);
											this.state = 199;
											this.match(SpringExpressionsParser.RSQUARE_BRACKET);
										}
									}
									break;
								case 2:
									{
										{
											this.state = 200;
											this.match(SpringExpressionsParser.DOT);
											this.state = 201;
											this.match(SpringExpressionsParser.IDENTIFIER);
										}
									}
									break;
							}
						}
					}
					this.state = 206;
					this.errorHandler.sync(this);
					alternative = this.interpreter.adaptivePredict(
						this.tokenStream,
						25,
						this.context
					);
				}
			}
		} catch (re) {
			if (re instanceof antlr.RecognitionException) {
				this.errorHandler.reportError(this, re);
				this.errorHandler.recover(this, re);
			} else {
				throw re;
			}
		} finally {
			this.exitRule();
		}
		return localContext;
	}
	public literalValue(): LiteralValueContext {
		const localContext = new LiteralValueContext(this.context, this.state);
		this.enterRule(localContext, 26, SpringExpressionsParser.RULE_literalValue);
		let _la: number;
		try {
			this.enterOuterAlt(localContext, 1);
			{
				this.state = 207;
				_la = this.tokenStream.LA(1);
				if (!((_la & ~0x1f) === 0 && ((1 << _la) & 469762048) !== 0)) {
					this.errorHandler.recoverInline(this);
				} else {
					this.errorHandler.reportMatch(this);
					this.consume();
				}
			}
		} catch (re) {
			if (re instanceof antlr.RecognitionException) {
				this.errorHandler.reportError(this, re);
				this.errorHandler.recover(this, re);
			} else {
				throw re;
			}
		} finally {
			this.exitRule();
		}
		return localContext;
	}
	public operator(): OperatorContext {
		const localContext = new OperatorContext(this.context, this.state);
		this.enterRule(localContext, 28, SpringExpressionsParser.RULE_operator);
		let _la: number;
		try {
			this.enterOuterAlt(localContext, 1);
			{
				this.state = 209;
				_la = this.tokenStream.LA(1);
				if (!((_la & ~0x1f) === 0 && ((1 << _la) & 14681048) !== 0)) {
					this.errorHandler.recoverInline(this);
				} else {
					this.errorHandler.reportMatch(this);
					this.consume();
				}
			}
		} catch (re) {
			if (re instanceof antlr.RecognitionException) {
				this.errorHandler.reportError(this, re);
				this.errorHandler.recover(this, re);
			} else {
				throw re;
			}
		} finally {
			this.exitRule();
		}
		return localContext;
	}


	private static __ATN: antlr.ATN;
	public static get _ATN(): antlr.ATN {
		if (!SpringExpressionsParser.__ATN) {
			SpringExpressionsParser.__ATN = new antlr.ATNDeserializer().deserialize(
				SpringExpressionsParser._serializedATN
			);
		}

		return SpringExpressionsParser.__ATN;
	}

	private static readonly vocabulary = new antlr.Vocabulary(
		SpringExpressionsParser.literalNames,
		SpringExpressionsParser.symbolicNames,
		[]
	);

	public override get vocabulary(): antlr.Vocabulary {
		return SpringExpressionsParser.vocabulary;
	}

	private static readonly decisionsToDFA =
		SpringExpressionsParser._ATN.decisionToState.map(
			(ds: antlr.DecisionState, index: number) => new antlr.DFA(ds, index)
		);
}

export class ExpressionContext extends antlr.ParserRuleContext {
	public constructor(
		parent: antlr.ParserRuleContext | null,
		invokingState: number
	) {
		super(parent, invokingState);
	}
	public printExpression(): PrintExpressionContext | null {
		return this.getRuleContext(0, PrintExpressionContext);
	}
	public EOF(): antlr.TerminalNode {
		return this.getToken(SpringExpressionsParser.EOF, 0)!;
	}
	public logicalExpressionWithParen(): LogicalExpressionWithParenContext | null {
		return this.getRuleContext(0, LogicalExpressionWithParenContext);
	}
	public override get ruleIndex(): number {
		return SpringExpressionsParser.RULE_expression;
	}
	public override enterRule(listener: SpringExpressionsListener): void {
		if (listener.enterExpression) {
			listener.enterExpression(this);
		}
	}
	public override exitRule(listener: SpringExpressionsListener): void {
		if (listener.exitExpression) {
			listener.exitExpression(this);
		}
	}
}
